--- a/index.html
+++ b/index.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<link real="stylesheet" href="style.css">
+<link rel="stylesheet" href="style.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>"Meu objetivos profissionais"</h1>
+    <h1>Meu objetivos profissionais</h1>
     <p>
-        "Meu objetivo com o curso de ADS, é adquirir conhecimentos e experiência necessária
+        Meu objetivo com o curso de ADS, é adquirir conhecimentos e experiência necessária
         pra me tornar um desenvolvedor de software. Atualmente minhas pretenções giram em torno
         de conhecimentos relacionados ao desenvolvimento de software com foco em backend.
     </p>
     <ol>
-        <li>"Java"</li>
-        <li>"SpringBoot"</li>
-        <li>"Sql"</li>
+        <li>Java</li>
+        <li>Springboot</li>
+        <li>Sql</li>
         <li>""</li>
     </ol>
     <ul>
-        <li>"Carros"</li>
-        <li>"Tecnologia"</li>
-        <li>"Filmes"</li>
-        <li>"Jogos"</li>
-        <li>"Livros"</li>
+        <li>Carros</li>
+        <li>Tecnologia</li>
+        <li>Filmes</li>
+        <li>Jogos</li>
+        <li>Livros</li>
     </ul>
-    <a href="https://www.ibm.com/br-pt/topics/encryption#:~:text=A%20criptografia%20usa%20a%20seguran%C3%A7a,armazenados%20(ou%20em%20repouso)." target="blank">www.ibm.com</a>
+    <a href="https://github.com/gustavo07henri" target="blank">github.com/gustavo07henri</a>
     <a href="https://pokemondb.net/pokedex/gengar"><img src="https://img.pokemondb.net/sprites/x-y/normal/gengar.png" alt="Gengar"></a>
     <
 </body>
