--- a/index.html
+++ b/index.html
@@ -1,33 +1,61 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<link rel="stylesheet" href="style.css">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Meu objetivos profissionais</h1>
+
+    <button id="toggle-theme" class="theme-toggle">
+        <img src="image/sun.png" id="icon-theme" alt="Ícone do tema"/>
+    </button>
+    <div class="foto-wrapper">
+        <img class="foto-perfil" src="image/png-sem-fundo.png" alt="Minha foto">
+    </div>
+
+
+
+    <h1>Meu objetivos profissionais em TI</h1>
     <p>
-        Meu objetivo com o curso de ADS, é adquirir conhecimentos e experiência necessária
-        pra me tornar um desenvolvedor de software. Atualmente minhas pretenções giram em torno
-        de conhecimentos relacionados ao desenvolvimento de software com foco em backend.
+        Meu objetivo com o curso de ADS é adquirir conhecimentos e experiência necessários
+        para me tornar um desenvolvedor de software. Atualmente, minhas pretensões giram em torno
+        de aprofundar conhecimentos em desenvolvimento de software com foco em backend.
     </p>
-    <ol>
-        <li>Java</li>
-        <li>Springboot</li>
-        <li>Sql</li>
-        <li>""</li>
-    </ol>
-    <ul>
-        <li>Carros</li>
-        <li>Tecnologia</li>
-        <li>Filmes</li>
-        <li>Jogos</li>
-        <li>Livros</li>
-    </ul>
-    <a href="https://github.com/gustavo07henri" target="blank">github.com/gustavo07henri</a>
-    <a href="https://pokemondb.net/pokedex/gengar"><img src="https://img.pokemondb.net/sprites/x-y/normal/gengar.png" alt="Gengar"></a>
-    <
+
+   <div class="container-tecnologias">
+       <h2>Tecnologias que estou estudando</h2>
+       <ol>
+           <li>Java</li>
+           <li>Springboot</li>
+           <li>Sql</li>
+           <li>HTML</li>
+           <li>CSS</li>
+           <li>JavaScript</li>
+           <li>Python</li>
+       </ol>
+   </div>
+
+    <div class="container-interesses">
+        <h2>Meus interesses pessoais</h2>
+        <ul>
+            <li>Carros</li>
+            <li>Tecnologia</li>
+            <li>Filmes</li>
+            <li>Jogos</li>
+            <li>Livros</li>
+        </ul>
+    </div>
+    <div class="container-refs">
+        <a href="https://github.com/gustavo07henri" target="blank">
+            <img src="image/github.png"  width="50"/>
+        </a>
+        <a href="https://linkedin.com/in/gustavo-henrique-633a21246" target="_blank">
+            <img src="image/LI-In-Bug.png" width="50"/>
+        </a>
+    </div>
+    <script src="script.js"></script>
+
 </body>
 </html>
